--- a/css/styles.css
+++ b/css/styles.css
@@ -21,15 +21,16 @@ body {
 
 .resume-main {
     background-color: #fffefc;
-    font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
-    color: #494949;
+    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
+	color: #494949;
     text-shadow: 0px 0px #2F2F2F;
+    
 }
 
 .resume-aside {
     background-color: #FDE1EF;
-    font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
-    color: #494949;
+    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+    color: hsla(0,0%,29%,1.00);
 }
 
 /* Styles for lists in the document */
@@ -67,4 +68,16 @@ body {
     font-weight: bold;
     color: #FFFFFF;
     
+}
+
+.abril-fatface-regular {
+  font-family: "Abril Fatface", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.oooh-baby-regular {
+  font-family: "Oooh Baby", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
